Add .vscode folders to ignored

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@
 obj
 
 #--------------------------------------------
+# IDE temporary files
+#--------------------------------------------
+.vscode
+*.layout
+
+#--------------------------------------------
 # Provisional files/folders marked as [xxx]
 #--------------------------------------------
 \[*\]
