--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "emulationstation-themes"]
-	path = emulationstation-themes
+[submodule "Assets/emulationstation-themes"]
+	path = Assets/emulationstation-themes
 	url = https://github.com/Chandler-Kluser/vircon32-libretro-theme-resources.git
